...
            TextButton(onClick = onDismiss) { Text("Cancel") }
        },
        title = { Text("Save recipe") },
        text = {
            Column {
                TextButton(onClick = onUpdate) { Text("Update \"$loadedRecipeName\"") }
                TextButton(onClick = onSaveAsNew) { Text("Save as new…") }
                newNamesChecklist()
            }
        },
        modifier = modifier
    )
}
...
